added css to cv website

--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, First Website, Giordan Andrew" />
   <meta name="author" content="Giordan Andrew" />
   <title>Giordan's Personal Website</title>
-  <link rel="apple-touch-icon" sizes="57x57" href="Images/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="Images/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="Images/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="Images/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="Images/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="Images/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="Images/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="Images/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="Images/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="Images/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="/Imagesmanifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -27,7 +28,7 @@
 </head>
 
 <body>
-  <table cellspacing = 20>
+  <table class="introTable" cellspacing = 20>
     <tr>
       <td><img src="Images/giordan&ButterBaker.JPG"
            alt="A picture of Giordan Andrew"
@@ -37,7 +38,7 @@
       </td>
       <td>
         <h1>Giordan Andrew</h1>
-        <p><em>Computer <strong>Engineering Student</strong></em></p>
+        <p><em>Computer Engineering Student</em></p>
         <p>I am a energetic soul who adores coffee and poetry💙!! I also am quite fond of physical activites such as running, working out at the gym, and longbaording!</p>
       </td>
     </tr>
@@ -51,7 +52,7 @@
   </ul>
   <hr>
   <h3>Experience</h3>
-  <table border = "1">
+  <table class="expTable">
     <thead>
       <th>Year</th>
       <th>Title</th>
@@ -112,7 +113,7 @@
   <br>
   <hr>
   <h3>Skills</h3>
-  <table cellspacing = "10">
+  <table class="skillsTable" cellspacing = "10">
     <tr>
       <td>Programming</td>
       <td>⭐⭐⭐⭐</td>
