--- a/my-hobbies.html
+++ b/my-hobbies.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>My Hobbies</h1>
     <ul>
-      <li>Long Boarding</li>
-      <li>Poetry</li>
-      <li>Photography</li>
-      <li>Music</li>
+      <li><p>Long Boarding</p></li>
+      <li><p>Poetry</p></li>
+      <li><p>Photography</p></li>
+      <li><p>Music</p></li>
     </ul>
   </body>
 </html>
