--- a/contact-me.html
+++ b/contact-me.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Contact Me</h1>
