Included some minor adjustments
- Included more information in regards to experience
- Created a new bullet point style for any un-ordered lists

--- a/index.html
+++ b/index.html
@@ -48,17 +48,38 @@
   <h3>Education</h3>
   <ul>
     <li><a href="https://www.ryerson.ca/">Ryerson University</a></li>
-    <li><a href="https://www.tcdsb.org/schools/senatoroconnor/Pages/default.aspx">Senator O'Connor College School</a></li>
   </ul>
   <hr>
   <h3>Experience</h3>
   <table class="expTable">
     <thead>
-      <th>Year</th>
-      <th>Title</th>
+      <th class="thExtra">Year</th>
+      <th class ="thExtra">Title</th>
       <th>Description</th>
     </thead>
     <tbody>
+      <tr>
+        <td>10/2019 – Present</td>
+        <td>Mathematics Tutor</td>
+        <td>
+          <table>
+            <tbody>
+              <tr>
+                <td>• Supervise and assist youth with elementary and secondary
+                      level mathematics concepts which regularly improves their
+                      confidence and test scores by at least one letter grade
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  • Provide youth with mentoring and positive guidance that aid
+                        with their decision-making and personal development
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
       <tr>
         <td>05/2019 - Present</td>
         <td>Intern</td>
