--- a/index.html
+++ b/index.html
@@ -2,161 +2,123 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="This website is the first version of Giordan trying to relearn and review HTML">
-  <meta name="keywords" content="HTML, CSS, JavaScript, First Website, Giordan Andrew" />
-  <meta name="author" content="Giordan Andrew" />
-  <title>Giordan's Personal Website</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="manifest" href="/Imagesmanifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap">
+  <link href="https://fonts.googleapis.com/css?family=Baskervville|Enriqueta|Roboto+Slab|Sorts+Mill+Goudy&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/logo-bunny.png">
+  <meta charset="utf-8">
+  <meta name="description" content="A notebook which portrays information regarding Giordan Andrew, a Computer Engineering student from Toronto, Ontario.">
+  <meta name="keywords" content="Giordan Andrew notebook">
+  <meta name="author" content="Giordan Andrew">
+  <title>Giordan's Notebook</title>
 </head>
 
 <body>
-  <table class="introTable" cellspacing = 20>
-    <tr>
-      <td><img src="Images/giordan&ButterBaker.JPG"
-           alt="A picture of Giordan Andrew"
-           height = 256
-           width = 192
-           style="border-radius: 45px;" >
-      </td>
-      <td>
-        <h1>Giordan Andrew</h1>
-        <p><em>Computer Engineering Student</em></p>
-        <p>I am a energetic soul who adores coffee and poetry💙!! I also am quite fond of physical activites such as running, working out at the gym, and longbaording!</p>
-      </td>
-    </tr>
-  </table>
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li><a href="https://www.ryerson.ca/">Ryerson University</a></li>
-  </ul>
-  <hr>
-  <h3>Experience</h3>
-  <table class="expTable">
-    <thead>
-      <th class="thExtra">Year</th>
-      <th class ="thExtra">Title</th>
-      <th>Description</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>10/2019 – Present</td>
-        <td>Mathematics Tutor</td>
-        <td>
-          <table>
-            <tbody>
-              <tr>
-                <td>• Supervise and assist youth with elementary and secondary
-                      level mathematics concepts which regularly improves their
-                      confidence and test scores by at least one letter grade
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  • Provide youth with mentoring and positive guidance that aid
-                        with their decision-making and personal development
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td>05/2019 - Present</td>
-        <td>Intern</td>
-        <td>
-          <table>
-            <tr>
-              <td>• Creating an inclusive plugin for existing stock animation
-                  platforms which enable users to illustrate and share
-                  immersive imagery, values, and lessons in their lives they
-                  wish to share
-              </td>
-            </tr>
-            <tr>
-              <td>• Researched on the use of PHP and Deep Learning to create the plugin
-              </td>
-            </tr>
-            <tr>
-              <td>• Created a minimum viable product (MVP) on Unity to validate Mozaiq's business model
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td>07/2019 - Present</td>
-        <td>Youth Hub Tutor</td>
-        <td>
-          <table>
-            <tr>
-              <td>• Supervise and assist youth with elementary and secondary
-                    level mathematics and science concepts which regularly
-                    improves test scores by at least one letter grade
-              </td>
-            </tr>
-            <tr>
-              <td>• Provide youth with mentoring and positive guidance that aid
-                    with their decision-making and personal development
-              </td>
-            </tr>
-            <tr>
-              <td>• Collaborate with library staff and tutors to assist in
-                    additional program activities which encouraged a more
-                    inclusive environment and strengthened rapport within TPL
-                    community
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <br>
-  <hr>
-  <h3>Skills</h3>
-  <table class="skillsTable" cellspacing = "10">
-    <tr>
-      <td>Programming</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Skating</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Poetry</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Photography</td>
-      <td>⭐⭐</td>
-    </tr>
-  </table>
-  <br>
-  <hr>
-  <a href="contact-me.html">Contact Me</a>
-  <a href="social-media.html">Social Media</a>
-  <a href="my-hobbies.html">My Hobbies</a>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="An image of a cloud">
+    <div class="info-container">
+      <h1>Giordan Andrew.</h1>
+      <p>a computer engineering student,<br>web designer,<br>& programmer.</p>
+    </div>
+    <img class="bottom-cloud" src="images/cloud.png" alt="An image of a cloud">
+    <img class="mountain" src="images/mountain.png" alt="An image of a mountain">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-pic" src="images/giordan-summer-pic.png" alt="A picture of Giordan">
+      <h2>Hi.</h2>
+      <p>I'm Giordan, a computer engineering student from Toronto, Ontario. <br> I have a huge passion for software development, design,
+        and photography. <br>I also love coffee!☕</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <div class="skill-1-left">
+          <h3 class="skill-1-header">Programming.</h3>
+          <p class="skill-1-info">I am equipped with a wide variety of programming languages <br>
+               under my belt such as Java, Python, C, and have written over <br>
+               1000+ computer programs throughout my 5 years of coding <br>
+               experience. Utilizing my knowledge and experience, I am <br>
+               certain that I can tackle any challenge!</p>
+        </div>
+        <div class="skill-1-right">
+            <img class="computer" src="images/computer.png" alt="A picture of a computer.">
+        </div>
+      </div>
+      <!-- <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Personal Projects.</h3>
+        <p>SignAI</p>
+      </div> -->
+    </div>
+    <hr>
+    <div class="experience">
+      <h2 class="experience-header">Experience.</h2>
+      <div class="exp-row">
+        <div class="exp-1-left">
+            <img class="people" src="images/people.png" alt="A image consisting of various people.">
+        </div>
+        <div class="exp-1-right">
+          <h3 class="exp-1-header">Intern/Programmer.</h3>
+          <p class="exp-1-info">Currently an intern/programmer for a startup at the <br>
+                Ryerson, Transmedia Zone. Our current project is to <br>
+                create an inclusive plugin for existing stock animation <br>
+                platforms which enable users to illustrate and share <br>
+                immersive imagery, values, and lessons they wish to <br>share.
+          </p>
+        </div>
+      </div>
+      <div class="exp-row">
+        <div class="exp-2-left">
+          <h3>Private Tutor-Mentor.</h3>
+          <p>When I do not have any classes, I work as private tutor with <br>
+            TutorBright. I assist my students in learning mathematical <br>
+            concepts and building a solid foundation. Additionally, I <br>
+            provide guidance beyond their curriculum such as building <br>
+            their confidence and work ethic so they can achieve success <br>
+            and meet their academic goals. <br>
+          </p>
+        </div>
+        <div class="exp-2-right">
+            <img class="rep-models" src="images/rep-models.png" alt="A picture of different representation models.">
+        </div>
+      </div>
+      <div class="exp-row">
+        <div class="exp-3-left">
+          <img class="books" src="images/books.png" alt="A picture of books.">
+        </div>
+        <div class="exp-3-right">
+          <h3>Youth Hub Tutor.</h3>
+          <p>During my free time, I volunteer tutor at the Toronto <br>
+              Public Library and provide youth with help in learning <br>
+              mathematics and science concepts.I also collaborate with <br>
+              library staff and other tutors to help create a more inclusive <br>
+              and welcoming environment!
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <p>Feel free to check up and follow me on my social media accounts to get updates on what I am currently doing! </p>
+    </div>
+    <a class="btn" href="mailto:giordandelacruz@gmail.com">Contact me</a>
+    <a class="footer-link" href="https://www.instagram.com/giordanandrew/">Instagram</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/giordan-dela-cruz/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/GiordanDelaCruz">GitHub</a>
+    <br>
+    <br>
+    <p class="copyright">© 2019 Giordan Andrew. All Rights Reserved.</p>
+  </div>
+
+
 </body>
 
 </html>
