Fixed image positions for different screens
Before, the clouds inside the top container of version2.0 was positioned using absolute attribute. 

Due to this, if a user's browser was zoomed it or out, the clouds would move accordingly. This lead to cases where the clouds would block the header and intro, or cases where the clouds were just too far spread out. 

In version2.0.1, no content has changed. Only the way the elements inside the top container are laid out has changed.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <body>
 
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="An image of a cloud">
     <div class="info-container">
-      <h1>Giordan Andrew.</h1>
-      <p>a computer engineering student,<br>web designer,<br>& programmer.</p>
+      <img class="top-cloud" src="images/cloud.png" alt="An image of a cloud">
+      <h1 class="name">Giordan Andrew.</h1>
+      <p class="intro">a computer engineering student,<br>web designer,<br>& programmer.</p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="An image of a cloud">
+      <div class="mountain-container">
+          <img class="mountain" src="images/mountain.png" alt="An image of a mountain">
+      </div>
     </div>
-    <img class="bottom-cloud" src="images/cloud.png" alt="An image of a cloud">
-    <img class="mountain" src="images/mountain.png" alt="An image of a mountain">
   </div>
 
   <div class="middle-container">
