--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Baskervville|Enriqueta|Roboto+Slab|Sorts+Mill+Goudy&display=swap" rel="stylesheet">
   <link rel="icon" href="images/logo-bunny.png">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A notebook which portrays information regarding Giordan Andrew, a Computer Engineering student from Toronto, Ontario.">
   <meta name="keywords" content="Giordan Andrew notebook">
   <meta name="author" content="Giordan Andrew">
