Fixed text errors

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <h3 class="exp-1-header">Intern/Programmer.</h3>
           <p class="exp-1-info">Currently an intern/programmer for a startup at the <br>
                 Ryerson, Transmedia Zone. Our current project is to <br>
-                create an inclusive plugin for existing stock animation <br>
-                platforms which enable users to illustrate and share <br>
-                immersive imagery, values, and lessons they wish to <br>share.
+                create an inclusive plugin which enable users to <br>
+                illustrate and share immersive imagery, values, and <br>
+                lessons on existing stock animation platfroms.
           </p>
         </div>
       </div>
